# coding-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  config.json  conftest.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run.sh
.github/workflows/: ci.yml
sandbox/: .gitkeep
src/: chat.py  main.py  models.py
src/tools/: __init__.py  create_directory.py  delete_directory.py  delete_file.py  edit_file.py  get_current_time.py  list_files.py  move_file.py  read_file.py  registry.py  rename_directory.py  rename_file.py  sort_data.py  write_file.py
tests/: conftest.py  test_chat.py
tests/test_tools/: test_create_directory.py  test_delete_directory.py  test_delete_file.py  test_edit_file.py  test_get_current_time.py  test_list_files.py  test_move_file.py  test_read_file.py  test_registry.py  test_rename_directory.py  test_rename_file.py  test_sort_data.py  test_write_file.py
